--- a/css/Develloppeurs.css
+++ b/css/Develloppeurs.css
@@ -24,7 +24,7 @@ header {
 }
 
 body {
-  background-image: url(https://www.nautiljon.com/images/actualite/00/67/1510748564047_image.gif);
+  background-image: url('../Images/background.gif');
   background-size: 125%;
 }
 
