--- a/css/Develloppeurs.css
+++ b/css/Develloppeurs.css
@@ -6,20 +6,19 @@
   background-color: #CCC769;
   color: white;
   text-decoration: none;
-  border-radius: 30px;
 }
 
 .Menu:hover {
   background-color: #EEE87B;
   border-color: #EEE87B;
   text-decoration: none;
-  border-radius: 30px;
 }
 
 header {
   background-color: inherit;
-  border: 5px solid white;
+  border: 5px solid inherit;
   color: white;
+  padding: 20px;
   text-shadow: #FC0 1px 0 10px;
 }
 
@@ -30,7 +29,6 @@ body {
 
 .introduction {
   border: 5px solid black;
-  border-radius: 30px;
   padding: 10px;
 }
 
@@ -41,12 +39,19 @@ body {
 .a_propos {
   border: 5px solid black;
   background-color: #EEE87B;
-  border-radius: 30px;
   padding: 10px;
 }
 
 .image_editeur {
   width: 100px;
+}
+
+footer {
+  color: white;
+}
+
+@media screen end {
+  max-width: 950px;
 }
 
 footer {
