--- a/css/Genres.css
+++ b/css/Genres.css
@@ -7,20 +7,19 @@
   color: white;
   text-decoration: none;
   color: black;
-  border-radius: 30px;
 }
 
 .Menu:hover {
   background-color: #229954;
   border-color: #229954;
   text-decoration: none;
-  border-radius: 30px;
 }
 
 header {
   background-color: inherit;
-  border: 5px solid white;
+  border: 5px solid inherit;
   color: white;
+  padding: 20px;
   text-shadow: #FC0 1px 0 10px;
 }
 
@@ -40,12 +39,23 @@ body {
 .a_propos {
   border: 5px solid black;
   background-color: #7DCEA0;
-  border-radius: 30px;
   padding: 10px;
 }
 
 .introduction {
   background-color: #7DCEA0;
-  border-radius: 30px;
   padding: 10px;
+}
+
+@media screen end {
+  max-width: 950px;
+}
+
+footer {
+  color: white;
+}
+
+.sous_titre {
+  font-size: x-large;
+  font-weight: bold;
 }
