--- a/css/index.css
+++ b/css/index.css
@@ -6,20 +6,19 @@
   background-color: #341FE0;
   color: white;
   text-decoration: none;
-  border-radius: 30px;
 }
 
 .Menu:hover {
   background-color: #2D1DB1;
   border-color: #2D1DB1;
   text-decoration: none;
-  border-radius: 30px;
 }
 
 header {
   background-color: inherit;
-  border: 5px solid white;
+  border: 5px solid inherit;
   color: white;
+  padding: 20px;
   text-shadow: #FC0 1px 0 10px;
 }
 
@@ -30,7 +29,6 @@ body {
 
 .introduction {
   border: 2px solid black;
-  border-radius: 30px;
   padding: 10px;
   color: black;
 }
@@ -41,4 +39,8 @@ body {
 
 footer {
   color: white;
+}
+
+@media screen end {
+  max-width: 950px;
 }
